default/objects/Emarsys_Log__c/Emarsys_Log__c.object-meta.xml
<CustomObject>
    <label>Emarsys Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Emarsys Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emarsys Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>