default/objects/Emarsys_Log__c/fields/Bounce_Status__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Status__c</fullName>
    <label>Bounce Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>