default/objects/Emarsys_Log__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Types of business: RU, Eu et.</description>
    <label>Business Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>