default/objects/Emarsys_Log__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>