default/objects/Emarsys_Log__c/fields/Cards__c.field-meta.xml
<CustomField>
    <fullName>Cards__c</fullName>
    <formula>Opportunity__r.ALL_Cards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Кол-во карт</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>