default/objects/Emarsys_Log__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <label>Email Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>