default/objects/Emarsys_Log__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>