default/objects/Emarsys_Log__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <label>Email Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>