default/objects/Emarsys_Log__c/fields/id_lead__c.field-meta.xml
<CustomField>
    <fullName>id_lead__c</fullName>
    <formula>Lead__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Код интереса</label>
    <type>Text</type>
</CustomField>