default/objects/Emarsys_Log__c/fields/id_opportunity__c.field-meta.xml
<CustomField>
    <fullName>id_opportunity__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <label>Код возможности</label>
    <type>Text</type>
</CustomField>