default/objects/Emarsys_Log__c/fields/Is_Email_Body_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Body_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Body Updated</label>
    <type>Checkbox</type>
</CustomField>