default/objects/Emarsys_Log__c/fields/Last_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Check__c</fullName>
    <label>Last Check</label>
    <type>DateTime</type>
</CustomField>