default/objects/Emarsys_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Emarsys Logs</relationshipLabel>
    <relationshipName>Emarsys_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>