default/objects/Emarsys_Log__c/fields/Lead_Status_Specific__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Specific__c</fullName>
    <formula>TEXT( Lead__r.Lead_Status_Specific__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Причина дисквалификации</label>
    <type>Text</type>
</CustomField>