default/objects/Emarsys_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Emarsys Logs</relationshipLabel>
    <relationshipName>Emarsys_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>