default/objects/Emarsys_Log__c/fields/PPR_Legacy_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_Log_Id__c</fullName>
    <label>PPR_Legacy_Log_Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>