default/objects/Emarsys_Log__c/fields/Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Query_Id__c</fullName>
    <description>ID of emarsys query.</description>
    <label>Query_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>