default/objects/Emarsys_Log__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <description>Used to log reaction responses of emails (like opened/ not_opened/ received/ clicked/ not_clicked (a link in the email)/ bounced/ hard_bounced/ soft_bounced/ block_bounced)</description>
    <label>Segment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>