default/objects/Emarsys_Log__c/fields/Status_lead__c.field-meta.xml
<CustomField>
    <fullName>Status_lead__c</fullName>
    <formula>TEXT(Lead__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Статус интереса</label>
    <type>Text</type>
</CustomField>