default/objects/Emarsys_Log__c/listViews/PPR_Queue_Stock_DISQUALIFIED_Call_Center_Emarsys_Log.listView-meta.xml
<ListView>
    <fullName>PPR_Queue_Stock_DISQUALIFIED_Call_Center_Emarsys_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>PPR Queue Stock DISQUALIFIED Call Center</label>
    <queue>PPR_Queue_Stock_DISQUALIFIED_Call_Center</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>