default/objects/Emarsys_Log__c/listViews/PPR_Queue_Stock_DISQUALIFIED_Emarsys_Log.listView-meta.xml
<ListView>
    <fullName>PPR_Queue_Stock_DISQUALIFIED_Emarsys_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>PPR Queue Stock DISQUALIFIED</label>
    <queue>PPR_Queue_Stock_DISQUALIFIED</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>