default/objects/Emarsys_Log__c/listViews/RussianWebLeads_Emarsys_Log.listView-meta.xml
<ListView>
    <fullName>RussianWebLeads_Emarsys_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>Russian Web Leads</label>
    <queue>RussianWebLeads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>